<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_small">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/getProductButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/margin_small"
        android:orientation="vertical"
        android:scrollbarStyle="outsideOverlay">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/centerVerticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="vertical"/>

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/product_image_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/product_image_description"
                tools:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/productNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/productImageView"
                app:layout_constraintEnd_toStartOf="@id/centerVerticalGuideline"
                app:layout_constraintStart_toStartOf="@id/productImageView"
                android:layout_marginTop="@dimen/margin_medium"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.AppCompat.Headline"
                tools:text="High Quality Books"/>

            <ImageView
                android:id="@+id/upVoteImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/productNameTextView"
                app:layout_constraintBottom_toTopOf="@id/productNameTextView"
                app:layout_constraintStart_toEndOf="@id/centerVerticalGuideline"
                android:layout_marginStart="@dimen/margin_small"
                android:src="@drawable/ic_thumb_up"
                android:contentDescription="@string/up_vote_image_description"/>

            <TextView
                android:id="@+id/upVoteTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/upVoteImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/upVoteImageView"
                app:layout_constraintStart_toEndOf="@id/upVoteImageView"
                android:layout_marginStart="@dimen/margin_small"
                tools:text="13134"/>

            <TextView
                android:id="@+id/productDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/productNameTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/TextAppearance.AppCompat.Body2"
                tools:text="This is the most amazing description ever."/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


    <Button
        android:id="@+id/getProductButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/get_label"/>

</android.support.constraint.ConstraintLayout>
